--- a/ninja-quiz/index.html
+++ b/ninja-quiz/index.html
@@ -14,7 +14,7 @@
   <body>
     <!-- Top section -->
     <div class="intro py-3 bg-white ">
-      <div class="container">
+      <div class="container text-center">
         <h2 class="text-primary display-3 my-4">Ninja Quiz</h2>
       </div>
       <!-- Quiz section -->
