--- a/ninja-quiz/index.html
+++ b/ninja-quiz/index.html
@@ -13,63 +13,85 @@
   </head>
   <body>
     <!-- Top section -->
-    <div class="intro py-3 bg-white ">
+    <div class="intro py-3 bg-white">
       <div class="container text-center">
         <h2 class="text-primary display-3 my-4">Ninja Quiz</h2>
       </div>
+      <div class="result py-4 d-none bg-light text-center">
+        <div class="container lead">
+          <p>
+            You are <span class="text-primary display-4 p-3">0%</span> ninja.
+          </p>
+        </div>
+      </div>
+
       <!-- Quiz section -->
       <div class="quiz py-4 bg-primary">
         <div class="container">
           <h2 class="my-5 text-white">On with the questions....</h2>
-          
-          <form  class="quiz-form text-light">
+
+          <form class="quiz-form text-light">
             <div class="my-5">
-                <p class="lead font-weight-normal">1.How do you give ninja directions?</p>
-                <div class="form-check my-2 text-white-50">
-                    <input type="radio" name="q1" value="A" checked>
-                    <label  class="form-check-label">Show them a map</label>
-                </div>
-                <div class="form-check my-2 text-white-50">
-                    <input type="radio" name="q1" value="B" >
-                    <label  class="form-check-label">Don't worry, a ninja will find you.</label>
-                </div>
+              <p class="lead font-weight-normal">
+                1.How do you give ninja directions?
+              </p>
+              <div class="form-check my-2 text-white-50">
+                <input type="radio" name="q1" value="A" checked />
+                <label class="form-check-label">Show them a map</label>
+              </div>
+              <div class="form-check my-2 text-white-50">
+                <input type="radio" name="q1" value="B" />
+                <label class="form-check-label"
+                  >Don't worry, a ninja will find you.</label
+                >
+              </div>
             </div>
             <div class="my-5">
-                <p class="lead font-weight-normal">2.If ninja has 3 apples, then gives one to Mario & one to Yoshi,
-                     how many apples does the ninja have left?</p>
-                <div class="form-check my-2 text-white-50">
-                    <input type="radio" name="q2" value="A" checked>
-                    <label  class="form-check-label">1 apple</label>
-                </div>
-                <div class="form-check my-2 text-white-50">
-                    <input type="radio" name="q2" value="B" >
-                    <label  class="form-check-label">3 apples, 2 corpses</label>
-                </div>
+              <p class="lead font-weight-normal">
+                2.If ninja has 3 apples, then gives one to Mario & one to Yoshi,
+                how many apples does the ninja have left?
+              </p>
+              <div class="form-check my-2 text-white-50">
+                <input type="radio" name="q2" value="A" checked />
+                <label class="form-check-label">1 apple</label>
+              </div>
+              <div class="form-check my-2 text-white-50">
+                <input type="radio" name="q2" value="B" />
+                <label class="form-check-label">3 apples, 2 corpses</label>
+              </div>
             </div>
             <div class="my-5">
-                <p class="lead font-weight-normal">3.How do you know when you met a ninja?</p>
-                <div class="form-check my-2 text-white-50">
-                    <input type="radio" name="q3" value="A" checked>
-                    <label  class="form-check-label">You'll recognize the outfit</label>
-                </div>
-                <div class="form-check my-2 text-white-50">
-                    <input type="radio" name="q3" value="B" >
-                    <label  class="form-check-label">The grim reaper will tell you.</label>
-                </div>
+              <p class="lead font-weight-normal">
+                3.How do you know when you met a ninja?
+              </p>
+              <div class="form-check my-2 text-white-50">
+                <input type="radio" name="q3" value="A" checked />
+                <label class="form-check-label"
+                  >You'll recognize the outfit</label
+                >
+              </div>
+              <div class="form-check my-2 text-white-50">
+                <input type="radio" name="q3" value="B" />
+                <label class="form-check-label"
+                  >The grim reaper will tell you.</label
+                >
+              </div>
             </div>
             <div class="my-5">
-                <p class="lead font-weight-normal">4.What is a ninja's favourite array method?</p>
-                <div class="form-check my-2 text-white-50">
-                    <input type="radio" name="q4" value="A" checked>
-                    <label  class="form-check-label">forEach()</label>
-                </div>
-                <div class="form-check my-2 text-white-50">
-                    <input type="radio" name="q4" value="B" >
-                    <label  class="form-check-label">Slice()</label>
-                </div>
+              <p class="lead font-weight-normal">
+                4.What is a ninja's favourite array method?
+              </p>
+              <div class="form-check my-2 text-white-50">
+                <input type="radio" name="q4" value="A" checked />
+                <label class="form-check-label">forEach()</label>
+              </div>
+              <div class="form-check my-2 text-white-50">
+                <input type="radio" name="q4" value="B" />
+                <label class="form-check-label">Slice()</label>
+              </div>
             </div>
             <div class="text-start">
-                <input type="submit" class="btn btn-light">
+              <input type="submit" class="btn btn-light" />
             </div>
           </form>
         </div>
